# machine-yearning

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: bigsoundbank_candidates.json
data/manifests/: archive_00-death-of-a-hard-drive.json  archive_android-422-battery-low-101soundboards.json  archive_anigamerspodcast122-guessiminchargeoftheconspiracycopsnow.json  archive_aporee-57603-65939.json  archive_bell-202-2400-baud-psalm-118-jpg.json  archive_bios-contrast-nilotpal-das-tunes-2021-2024.json  archive_car-notification-message.json  archive_charge-of-the-light-brigade.json  archive_cuban-numbers-station-and-sw-fax-2019-07-24-t-09-03-00-z-9240-0k-hz.json  archive_faux-startup-sound.json  archive_how-to-super-charge-the-law-of-attraction.json  archive_ideapad11015iskbios.json  archive_invpcid-kekbin-xf.json  archive_jesuslovesyou-202510.json  archive_jv-25933-1946-qmdl2w1pibejx8r6qdrughm8jwl4nz6okhpwlzagf7u5mc-mp3.json  archive_market-menu-community-crafted-cuisine-in-san-francisco.json  archive_marquito.json  archive_master-6-jeu-de-role-sexuel-nerd.json  archive_mikudayo-notification.json  archive_monstersincreadalongcd.json  archive_notification-18-270129.json  archive_playstation-startup-hiphop-remix.json  archive_pleasant-violin-notification-12-186545.json  archive_power-on-self-test-dj-cannabis-coffeeshops-deutschland.json  archive_sounds01.json  (+705 more)
player/: radio.py  server.py
scraper/: __init__.py  cli.py  manifest.py  normalize.py
scripts/: build_channels.py  machine-yearning.service
web/: app.js  index.html  style.css
(+9 files in other folders)
