[project]
name = "machine-yearning"
version = "0.1.0"
description = "A radio station of machine sounds — scrape, normalize, broadcast."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "ffmpeg-python>=0.2",
    "click>=8.1",
    "internetarchive>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scraper*"]
